# rinput

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  descriptor.rs  generate.rs  main.rs  record.rs  replay.rs  utils.rs
