[package]
name = "rinput"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.2"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.66"
dialoguer = "0.10.2"

[target.aarch64-unknown-linux-gnu.dependencies]
libc = {version = "0.2.137"}
input = {version = "0.7.1"}
evdev = {version = "0.12.0" }
walkdir = {version = "2.3.2"}

